/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package darksouls3;

/**
 *
 * @author aless
 */
public enum Event {
    ITEM_FOUND,
    CRAFT_BOSS_WEPON,
    NEW_LOCATION,
    NEW_NPC,
    RESTORE_HEALS,
    NEW_BOSS;
}
