/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package darksouls3;

/**
 *
 * @author aless
 */
public enum Map {
    FIRELINK_SHRINE,
    FARRON_KEEP,
    IRITHYLL_OF_THE_BOREAL_VALLEY,
    ANOR_LONDO,
    LOTHRIC_CASTLE,
    ARCHDRAGON_PEAK,
    KILN_OF_THE_FIRST_FLAME,
    PAINTED_WORLD_OF_ARIANDEL,
    THE_RINGED_CITY;
}
